--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
 
   }
   .box:hover {
+    background-color: seashell;
     transition: transform 0.5s ease;
     transform: scale(1.1);
     box-shadow: 5px 15px 15px 1px rgb(40, 54, 247);
@@ -24,10 +25,13 @@
   }
   
   .options-bar {
+    font-size: 80%;
     font-weight: bold;
     background-color: #b1eaf1;
     display: flex;
     justify-content: space-evenly;
+    position: sticky;
+    top: 0;
     padding: 25px;
     box-shadow: 0px 10px 15px 0px rgb(66, 200, 253);
   }
@@ -36,6 +40,7 @@
     letter-spacing: 2px; /* Adjust the value as per your preference */
     text-decoration: none;
     color: black;
+   
   }
   
   .option {
